# voltrix

./: .gitignore  LICENSE  README.md  VERSIONING.md  noxfile.py  pyproject.toml
.github/: cd.yml  ci.yml
.github/workflows/: cd.yml  ci.yml
src/voltrix/: __init__.py  __main__.py  indicators.py  util.py
src/voltrix/ali/: veli.py
tests/: __init__.py  conftest.py  strategies.py  test_basic.py  test_util_traciraptor.py
tests/examples/: test_pandas_examples.py  test_polars_examples.py  test_pydantic_examples.py
