[build-system]
# Turn in on once you figure out versioning
# requires = ["uv_build>=0.9.15,<0.10.0"]
# build-backend = "uv_build"
requires = ["setuptools>=80", "setuptools-scm>=9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voltrix"
dynamic = ["version"]
description = "VOLatility maTRIX - a python library for pricing formulas and models for trading and data apps"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["volatility", "finance", "pricing", "derivatives", "trading", "matrix"]
authors = [
    { name = "Seyhmus Guler", email = "seyhmusguler@gmail.com" },
]
dependencies = [
    "numpy",
    "scipy",
    "pydantic",
    "typing-extensions",
    "polars>=1.35.2",
    "pandas>=2.3.3",
]
[dependency-groups]
dev = [
    "build",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "nox[uv]",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.88.0",
    "pre-commit>=3.5.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

ntb = [
    "ipykernel",
    "matplotlib",
    "nbformat",
    "plotly",
    "seaborn",
]

[project.urls]
Homepage="https://github.com/SeyhmusGuler/voltrix"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Dynamic versioning configuration
# Version format: major.minor.patch.devN+gHASH (for development)
# Version format: major.minor.patch (for releases)
write_to = "src/voltrix/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"


[tool.ruff]
target-version = "py314"
line-length = 120


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "S",  # bandit
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["voltrix"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=voltrix",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
